# health-point

./: .gitignore  README.md
backend/: app.py  pyproject.toml  requirements.txt
backend/routers/: data.py
backend/services/: pkl_loader.py
backend/services/overall_data/: breathing_rate.py  heart_rate.py  movement.py  pulse_transit_time.py  stress_level.py  temperature.py
frontend/src/: App.tsx
frontend/src/components/: AiOverview.tsx  GeneralAiOverview.tsx  HumanVisualization.tsx  PersonaSelection.tsx  SensorModal.tsx  StatusPanel.tsx
frontend/src/components/visualizations/: BarChartViz.tsx  LineAreaViz.tsx  ProgressViz.tsx  RadialChartViz.tsx
frontend/src/data/: mockData.ts
frontend/src/services/: apiService.ts  openAiService.ts
