[tool]
name = "react-fastapi-pkl-visualizer"
version = "0.1.0"
description = "A project to visualize and analyze data from a pkl file using React and FastAPI."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependencies]
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
pandas = "^1.5.0"
python-multipart = "^0.0.6"